<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/textContentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImg"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="12dp"
        app:circularflow_defaultRadius="4dp"
        app:civ_border_color="@color/green2"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/topLine"
        app:civ_circle_background_color="@color/green2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/multicolore"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintStart_toEndOf="@+id/userImg"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/userAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/cairo_light"
        android:textColor="@color/text_color2"
        android:textSize="@dimen/_10sdp"
        android:drawablePadding="@dimen/_4sdp"
        android:paddingBottom="-2dp"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintStart_toEndOf="@+id/userImg"
        app:layout_constraintTop_toBottomOf="@+id/username" />
    <View
        android:id="@+id/topLine"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="#dfdfdf"
        app:layout_constraintTop_toBottomOf="@+id/userImg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:focusable="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:focusableInTouchMode="true"
            app:reverseLayout="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/layoutChatbox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLine" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginBottom="0dp"
            android:background="#dfdfdf"
            app:layout_constraintBottom_toTopOf="@+id/layoutChatbox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/layoutChatbox"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@android:color/white"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/enter_message"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="6"
               />

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:text="@string/send"
                android:textSize="16sp" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>