<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/addPostBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:visibility="gone"
            android:contentDescription="@string/add_post"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_75sdp"
            android:src="@drawable/ic_baseline_add_24"
            app:icon="@drawable/ic_baseline_add_24"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            android:text="@string/add_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <androidx.core.widget.NestedScrollView
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardBackgroundColor="#6B37BA72"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toTopOf="@+id/usernameTV"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/userImg"
                                android:layout_width="110dp"
                                android:layout_height="110dp"
                                android:layout_marginStart="@dimen/_8sdp"
                                android:src="@drawable/profile_image"
                                android:layout_marginEnd="@dimen/_8sdp"
                                android:layout_marginTop="@dimen/_8sdp"
                                android:layout_marginBottom="@dimen/_2sdp"
                                app:civ_border_color="@color/green"
                                app:civ_border_width="@dimen/_1sdp"
                                app:civ_circle_background_color="@color/text_color2"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                           </LinearLayout>
                        <TextView
                            android:id="@+id/usernameTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/cairo_regular"
                            android:gravity="start"
                            android:paddingStart="@dimen/_12sdp"
                            android:paddingEnd="@dimen/_12sdp"
                            android:paddingBottom="@dimen/_2sdp"
                            android:paddingTop="@dimen/_2sdp"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:text="@string/username"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/_11ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="170dp"
                            android:layout_height="122dp"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            app:layout_constraintBottom_toTopOf="@+id/usernameTV"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.842"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/message"
                            app:lottie_url="REPLACE_JSON_URL" />
                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:fontFamily="@font/cairo_light"
                            android:padding="@dimen/_4sdp"
                            android:visibility="gone"
                            android:text="@string/inbox_list"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                            app:layout_constraintTop_toTopOf="@+id/linearLayout2"
                            app:layout_constraintVertical_bias="0.011" />
                        <ImageView
                            android:id="@+id/contacts"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_margin="@dimen/_14sdp"
                            android:visibility="gone"
                            android:src="@drawable/ic_baseline_markunread_24"
                            app:layout_constraintBottom_toBottomOf="@+id/textView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textView"
                            app:layout_constraintTop_toTopOf="@+id/textView" />
                        <RelativeLayout
                            android:id="@+id/cardClicked"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_120sdp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/postsRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/post_item"
                    android:paddingBottom="@dimen/_70sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>